--- a/angular-webappclima/src/app/Components/clima-app/clima-app.component.html
+++ b/angular-webappclima/src/app/Components/clima-app/clima-app.component.html
@@ -1,8 +1,8 @@
 <div id="divClimaMain">
     <div class="climaAppRow" > {{WeatherData.cidade_nome}} </div>
-    <!-- <div clas="climaAppRow" > {{WeatherData.descricao}} </div> 
+    <div clas="climaAppRow" > {{WeatherData.descricao}} </div> 
     <div clas="climaAppRow" > {{WeatherData.temp_celcius}}°C </div>
-    <div clas="climaAppRow" > {{WeatherData.temp_min_celcius}}°C </div>
+    <!-- <div clas="climaAppRow" > {{WeatherData.temp_min_celcius}}°C </div>
     <div clas="climaAppRow" > {{WeatherData.temp_max_celcius}}°C </div>
     
     <div clas="climaAppRow" > {{WeatherData.sunset_time}} </div>
