--- a/angular-webappclima/src/app/app.component_.html
+++ b/angular-webappclima/src/app/app.component_.html
@@ -1,3 +1,6 @@
+<!--- Componente principal da aplicação -->
+
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
