Cria pag home da aplicação

--- a/angular-webappclima/src/app/app.component.html
+++ b/angular-webappclima/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--- Componente principal da aplicação -->
 
 <!-- Interface de visualização -->
-<app-clima-app></app-clima-app>
+<!-- Invoca o component de pagina home-->
+<app-pag-home></app-pag-home>
