Add os Components pag-home e pg-localidade e add o recurso de roteamento entre eles

--- a/angular-webappclima/src/app/app.component.html
+++ b/angular-webappclima/src/app/app.component.html
@@ -2,4 +2,6 @@
 
 <!-- Interface de visualização -->
 <!-- Invoca o component de pagina home-->
-<app-pag-home></app-pag-home>
+<!-- <app-pag-home></app-pag-home> -->
+
+<router-outlet></router-outlet>
