--- a/angular-webappclima/src/app/pag-home/pag-home.component.html
+++ b/angular-webappclima/src/app/pag-home/pag-home.component.html
@@ -1,9 +1,43 @@
-<div class="preloader" style="opacity: 1;">
+<div class="preloader" style="opacity: 1;" >
 
     <div class="text-h1">
         WEATHER
     </div>
+
+    <div class="text-h2">
+        select a city
+    </div>
+
+    <img class="globe" src="/assets/image/globe_white.png" alt="globe_white">
+
+    <div class="wrapper-texts">
     
+        <a  class="text-h3-1" href="url" [routerLink]="['location','dallol']"  style="text-decoration:none" >
+            Dallol
+        </a>
+
+        <a class="text-h3-1" href="url" [routerLink]="['location','fairbanks']" style="text-decoration:none" >
+            Fairbanks
+        </a>
+
+        <a class="text-h3-1" href="url" [routerLink]="['location','london']" style="text-decoration:none" >
+            London
+        </a>
+
+        <a class="text-h3-1" href="url" [routerLink]="['location','recife']" style="text-decoration:none" >
+            Recife
+        </a>
+
+        <a class="text-h3-1" href="url" [routerLink]="['location','vancouver']" style="text-decoration:none" >
+            Vancouver
+        </a>
+
+        <a class="text-h3-1" href="url" [routerLink]="['location','yakutsk']" style="text-decoration:none" >
+            Yakutsk
+        </a>
+    </div>
+        
+    <!--
     <svg version="1.1" id="sun" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve" style="opacity: 1; margin-left: 0px; margin-top: 0px;">
         <g>
         <path fill="none" d="M6.942,3.876c-0.4-0.692-1.146-1.123-1.946-1.123c-0.392,0-0.779,0.104-1.121,0.301c-1.072,0.619-1.44,1.994-0.821,3.067C3.454,6.815,4.2,7.245,5,7.245c0.392,0,0.779-0.104,1.121-0.301C6.64,6.644,7.013,6.159,7.167,5.581C7.321,5,7.243,4.396,6.942,3.876z M6.88,5.505C6.745,6.007,6.423,6.427,5.973,6.688C5.676,6.858,5.34,6.948,5,6.948c-0.695,0-1.343-0.373-1.69-0.975C2.774,5.043,3.093,3.849,4.024,3.312C4.32,3.14,4.656,3.05,4.996,3.05c0.695,0,1.342,0.374,1.69,0.975C6.946,4.476,7.015,5,6.88,5.505z"></path>
@@ -39,5 +73,5 @@
         <span class="drop"></span>
     </div>
     
-    
-    </div>
+    -->
+</div>
